--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Your Preferred Font", sans-serif;
+}
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav {
+  margin-left: 0;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+  background-color: #1c3c1f;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+nav img {
+  display: block;
+  max-width: 120px;
+  height: auto;
+}
+nav .leftSide > a {
+  text-decoration: None;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav .leftSide,
+nav .rightSide {
+  display: flex;
+  align-items: center;
+}
+
+nav ul li {
+  display: inline-block;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+nav .linkStyle {
+  text-decoration: None;
+  list-style-type: None;
+}
+nav li:hover {
+  background-color: rgb(35, 68, 41);
+}
+
+nav .linkStyle:visited {
+  color: white;
 }
