--- a/src/App.css
+++ b/src/App.css
@@ -1,50 +1,35 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Your Preferred Font", sans-serif;
-}
-.App {
-  text-align: center;
+  font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
 }
 
 nav {
   margin-left: 0;
   display: flex;
   justify-content: space-between;
-  background-color: #1c3c1f;
+  background-color: #323232;
   color: white;
 }
 
-nav img {
-  display: block;
-  max-width: 120px;
-  height: auto;
-}
-nav .leftSide > a {
-  text-decoration: None;
-}
-
-nav .leftSide,
-nav .rightSide {
-  display: flex;
-  align-items: center;
-}
-
-nav ul li {
+nav li {
+  margin: 10px;
   display: inline-block;
-  padding: 10px 20px;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-nav .linkStyle {
-  text-decoration: None;
   list-style-type: None;
 }
-nav li:hover {
-  background-color: rgb(35, 68, 41);
+
+nav ul li a {
+  padding: 8px 12px;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: None;
 }
 
-nav .linkStyle:visited {
+nav li a:hover {
+  background-color: #5a5a5a;
+}
+
+nav a:visited,
+nav a {
   color: white;
 }
