--- a/src/App.css
+++ b/src/App.css
@@ -74,43 +74,45 @@ nav div ul li a:visited {
   width: 100%; /* Expand the line to 100% width on hover */
 }
 
-/* AlbumsPage.css */
-.album-section {
+/* Artist Page */
+
+.artist-page .artist-img {
+  width: 200px;
+}
+
+.artist-page .artist-details {
   text-align: center;
-  background-color: white;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .album-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 20px;
-  margin-top: 20px;
+  display: grid;
+  grid-template-columns: repeat(5, 20%);
+  gap: 10px 0;
 }
 
 .album {
+  margin: 10px;
   border: 1px solid #ddd;
   padding: 10px;
-  border-radius: 5px;
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  transition: transform 0.2s, box-shadow 0.2s;
+  display: flex;
+  flex-direction: column;
 }
 
-.album:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+.album p {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .album img {
   width: 100%;
-  max-height: 150px;
-  object-fit: cover;
-  border-radius: 5px;
-  margin-top: 10px;
+  height: auto;
+}
+
+.album img:hover {
+  cursor: pointer;
 }
 
 /* Styles for the entire search bar container */
@@ -211,8 +213,17 @@ form {
   height: 100%;
 }
 
-/* Artist Page */
+/* Loading */
 
-.artist-page img {
-  width: 100px;
+.loading {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center; /* Center text horizontally */
+}
+
+.loading p {
+  font-size: 30px;
+  font-weight: bold;
 }
