--- a/src/App.css
+++ b/src/App.css
@@ -298,14 +298,11 @@ form {
 /* Loading */
 
 .loading {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center; /* Center text horizontally */
+  margin-top: 40px;
+  text-align: center;
 }
 
 .loading p {
-  font-size: 30px;
+  font-size: 20px;
   font-weight: bold;
 }
