--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,130 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  :root {
+    --text-50: #ecf9f1;
+    --text-100: #d8f3e2;
+    --text-200: #b2e6c6;
+    --text-300: #8bdaa9;
+    --text-400: #65cd8d;
+    --text-500: #3ec170;
+    --text-600: #329a5a;
+    --text-700: #257443;
+    --text-800: #194d2d;
+    --text-900: #0c2716;
+    --text-950: #06130b;
+    
+    --background-50: #e5fff0;
+    --background-100: #ccffe0;
+    --background-200: #99ffc2;
+    --background-300: #66ffa3;
+    --background-400: #33ff85;
+    --background-500: #00ff66;
+    --background-600: #00cc52;
+    --background-700: #00993d;
+    --background-800: #006629;
+    --background-900: #003314;
+    --background-950: #001a0a;
+    
+    --primary-50: #ecf8f1;
+    --primary-100: #d9f2e3;
+    --primary-200: #b4e4c7;
+    --primary-300: #8ed7ab;
+    --primary-400: #68ca8f;
+    --primary-500: #42bd73;
+    --primary-600: #35975c;
+    --primary-700: #287145;
+    --primary-800: #1b4b2e;
+    --primary-900: #0d2617;
+    --primary-950: #07130c;
+    
+    --secondary-50: #f0f5f4;
+    --secondary-100: #e1eaea;
+    --secondary-200: #c2d6d4;
+    --secondary-300: #a4c1bf;
+    --secondary-400: #86acaa;
+    --secondary-500: #679894;
+    --secondary-600: #537977;
+    --secondary-700: #3e5b59;
+    --secondary-800: #293d3b;
+    --secondary-900: #151e1e;
+    --secondary-950: #0a0f0f;
+    
+    --accent-50: #f0f4f5;
+    --accent-100: #e1e9ea;
+    --accent-200: #c2d3d6;
+    --accent-300: #a4bdc1;
+    --accent-400: #86a7ac;
+    --accent-500: #679098;
+    --accent-600: #537479;
+    --accent-700: #3e575b;
+    --accent-800: #293a3d;
+    --accent-900: #151d1e;
+    --accent-950: #0a0e0f;
+    
+  }
+  .dark {
+    --text-50: #06130b;
+    --text-100: #0c2716;
+    --text-200: #194d2d;
+    --text-300: #257443;
+    --text-400: #329a5a;
+    --text-500: #3ec170;
+    --text-600: #65cd8d;
+    --text-700: #8bdaa9;
+    --text-800: #b2e6c6;
+    --text-900: #d8f3e2;
+    --text-950: #ecf9f1;
+    
+    --background-50: #001a0a;
+    --background-100: #003314;
+    --background-200: #006629;
+    --background-300: #00993d;
+    --background-400: #00cc52;
+    --background-500: #00ff66;
+    --background-600: #33ff85;
+    --background-700: #66ffa3;
+    --background-800: #99ffc2;
+    --background-900: #ccffe0;
+    --background-950: #e5fff0;
+    
+    --primary-50: #07130c;
+    --primary-100: #0d2617;
+    --primary-200: #1b4b2e;
+    --primary-300: #287145;
+    --primary-400: #35975c;
+    --primary-500: #42bd73;
+    --primary-600: #68ca8f;
+    --primary-700: #8ed7ab;
+    --primary-800: #b4e4c7;
+    --primary-900: #d9f2e3;
+    --primary-950: #ecf8f1;
+    
+    --secondary-50: #0a0f0f;
+    --secondary-100: #151e1e;
+    --secondary-200: #293d3b;
+    --secondary-300: #3e5b59;
+    --secondary-400: #537977;
+    --secondary-500: #679894;
+    --secondary-600: #86acaa;
+    --secondary-700: #a4c1bf;
+    --secondary-800: #c2d6d4;
+    --secondary-900: #e1eaea;
+    --secondary-950: #f0f5f4;
+    
+    --accent-50: #0a0e0f;
+    --accent-100: #151d1e;
+    --accent-200: #293a3d;
+    --accent-300: #3e575b;
+    --accent-400: #537479;
+    --accent-500: #679098;
+    --accent-600: #86a7ac;
+    --accent-700: #a4bdc1;
+    --accent-800: #c2d3d6;
+    --accent-900: #e1e9ea;
+    --accent-950: #f0f4f5;
+    
+  }
+}
