--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,7 @@
     
   }
   .dark {
-    --text-50: #06130b;
+    --text-50: #000000;
     --text-100: #0c2716;
     --text-200: #194d2d;
     --text-300: #257443;
